--- a/AllNewAllDifferentAvengers/AllNewAllDifferentAvengers.html
+++ b/AllNewAllDifferentAvengers/AllNewAllDifferentAvengers.html
@@ -2,20 +2,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>All New All Different Avengers</title>
 </head>
 
 <body>
-<h2>All New All Different Avengers</h2>
-<img src="AllNewAllDifferentAvengers0_2016.jpg">
-<img src="AllNewAllDifferentAvengers2016.jpg"> <br>
-Series: on-going monthly<br>
-Illustrator: Kennith Rocafort, Adam Kubert<br>
-Writer: Mark Waid, Al Ewing<br>
-Publisher: 2015-Current Marvel<br>
+<img src="AllNewAllDifferentAvengers01.jpg"> <br>
+15 issues 2016 by Marvel
 <p>
-About: The Avengers are dead--long live the Avengers! Earth's Mightiest Heroes--Captain America, Thor, Vision and Iron Man--are living separate lives, not tied to any team but when a threat from beyond the stars targets our world, fate draws them together once more, alongside Nova, Ms. Marvel, and Miles Morales, a.k.a. Spider-Man!
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllNewAllDifferentAvengers18.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The Avengers are dead--long live the Avengers! Earth's Mightiest Heroes--Captain America, Thor, Vision and Iron Man--are living separate lives, not tied to any team but when a threat from beyond the stars targets our world, fate draws them together once more, alongside Nova, Ms. Marvel, and Miles Morales, a.k.a. Spider-Man!
 
 </p>
 </body>
