--- a/AllNewGhostRider/AllNewGhostRider.html
+++ b/AllNewGhostRider/AllNewGhostRider.html
@@ -2,19 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>All New Ghost Rider</title>
 </head>
 
 <body>
-<h2>All New Ghost Rider</h2>
-<img src="AllNewGhostRider.jpg"> <br>
-Series: on-going<br>
-Illustrator: Tradd Moore<br>
-Writer: Felipe Smith<br>
-Publisher: 2014 Marvel<br>
+<img src="ANGR01.jpg"> <br>
+12 issues 2014-2015 Marvel<br>
 <p>
-About: Released with 6 different covers they call variants. Roberto "Robbie" Reyes is a fictional superhero appearing in American comic books published by Marvel Comics. He is the fifth Marvel character to use the name Ghost Rider, after Alejandra Jones, Danny Ketch, Johnny Blaze and Carter Slade (also known as Phantom Rider).
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ANGR01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ANGR12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Released with 6 different covers called variants so all the sucker collectors buy 6 of the same issue. Roberto "Robbie" Reyes is a fictional superhero appearing in American comic books published by Marvel Comics. He is the fifth Marvel character to use the name Ghost Rider, after Alejandra Jones, Danny Ketch, Johnny Blaze and Carter Slade (also known as Phantom Rider).
 </p><p>
 Robbie Reyes is a high-school student working as a mechanic at an auto body shop who lives with his developmentally disabled brother Gabe and seeks to get away from the dangerous, gang-riddled streets of East Los Angeles. To that end, he enters a street race, hoping to use the prize money to move themselves away. When mercenaries gun him down while trying to retrieve pills that caused the transformation of Calvin Zabo into the supervillain Mr. Hyde, which had been left in the trunk unbeknownst to Robbie, the teen is revived as a demonic being with a flaming, helmet-like head. He drives off in the car, now similarly ablaze.
 </p><p>
