--- a/AllNewDoop/Doop.html
+++ b/AllNewDoop/Doop.html
@@ -7,15 +7,11 @@
 </head>
 
 <body>
-<h2>All New Doop</h2>
-<img src="Doop1.jpg"> <br>
-Series: on-going, 5 issues<br>
-Illustrator: David LaFuente<br>
-Writer: Peter Milligan<br>
-Publisher: 2014 Marvel<br>
+<img src="Doop1.jpg" title="Adi Granov"> <br>
+5 issues in 2014 by Marvel<br>
 <p>
 Takes place during the X-men: Battle of the Atom crossover. Doop becomes infatuated with Kitty Pryde and proposes to her.
-
 </p>
+
 </body>
 </html>
