--- a/AmazingDetective/AmazingDetective.html
+++ b/AmazingDetective/AmazingDetective.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Amazing Detective Cases</h2>
 <img src="AmazingDetective.jpg"> <br>
-Series: on-going, 12 issues <br>
-Publisher: 1950 Timely (Marvel)<br>
+12 issues 1950 Timely (Marvel)<br>
 <p>
 Possibly a comic adaptation of Amazing Detective Cases magazine of the 1940s. Not much is known, nor does anyone seem to know why the series started with #3. Could have been branched off of another series, but no one seems to remember anymore.
 </p>
