--- a/AmazingHighAdventure/AmazingHighAdventure.html
+++ b/AmazingHighAdventure/AmazingHighAdventure.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Amazing High Adventure</h2>
 <img src="AmazingHighAdventure.jpg"> <br>
-Series: on-going<br>
-Illustrator: Bill Sienkiewicz<br>
-Writer: Carl Potts<br>
-Publisher: 1984 Marvel<br>
+1 issue 1984 Marvel<br>
+Illustrator: Bill Sienkiewicz, Writer: Carl Potts<br>
+
 <p>
 Collected short stories.<br>
 Issue #1:<ul>
