--- a/AmazingScarletSpider/AmazingScarletSpider.html
+++ b/AmazingScarletSpider/AmazingScarletSpider.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Amazing Scarlet Spider</h2>
 <img src="AmazingScarletSpider.jpg"> <br>
-Series: 2 issue min-series 1995<br>
-Publisher: Marvel<br>
+2 issue min-series 1995 by Marvel<br>
 <p>
 "Violated by the Virtual" Virtual Mortality Part 2 of 4. Direct Edition. Plot by Tom DeFalco. Script by Mike Lackey. Pencils by Mark Bagley. Inks by Larry Mahlstedt. Cover by Mark Bagley and Larry Mahlstedt. 
 </p><p>
