--- a/AmazingScrewOnHead/AmazingScrewOnHead.html
+++ b/AmazingScrewOnHead/AmazingScrewOnHead.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Amazing Screw On Head</h2>
 <img src="AmazingScrewOnHead.jpg">
 <img src="AmazingScrewOnHead2010Book.jpg"> <br>
-Series: one-shot, 1 collection book<br>
-Illustrator: Mike Mignola<br>
-Writer: Mike Mignola<br>
-Publisher: 2002, 2010 Dark Horse<br>
+1 issue, 1 collectors book in 2002 and 2010 by Dark Horse<br>
+Illustrator and writer: Mike Mignola
 <p>
 The book collects various Mike Mignola stories including the title story. Similar in tone and theme to Mignola's better known Hellboy, The Amazing Screw-On Head is a black comedy that stars a robot living during the Lincoln administration whose head can be attached to different bodies with different tactical abilities, and who functions as an agent of the U.S. government.
 </p><p>
