--- a/Amazon/Amazon.html
+++ b/Amazon/Amazon.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>The Amazon</h2>
 <img src="Amazon.jpg"> <br>
-Series: 3 issue mini series, 1 collection book<br>
-Illustrator: Tim Sale<br>
-Writer: Steven T. Seagle<br>
-Publisher: 2010 Dark Horse<br>
+3 issues, 1 collection book 2010 Dark Horse<br>
+Illustrator: Tim Sale, Writer: Steven T. Seagle
 <p>
 The Amazon jungle is among the most ancient and biologically diverse places on earth, but it's being plundered for its resources and destroyed at a rate of thousands of acres a day. Reporter Malcolm Hilliard travels to this remote land of mystery to investigate the disappearance of an American worker and the subsequent sabotage of a timber company.
 </p><p>
