--- a/American/American.html
+++ b/American/American.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>The American</h2>
 <img src="American.jpg"> <br>
-Series: 4 issue mini series, on-going, collection (TPB)<br>
-Illustrator: Chris Warner<br>
-Writer: Mark Verheiden<br>
-Publisher: Dark Horse<br>
+4 issues, 1 collection (TPB) 1987-1989 Dark Horse<br>
+Illustrator: Chris Warner, Writer: Mark Verheiden
 <p>
 Two of the most sought after back issues from Dark Horse are the sold-out The American #1 and #2. Now readers who missed the first two ground-breaking issues, along with all of the other fans in the series, can own the first four issues of Mark Verheiden's The American in a handsome square-bound volume.
 </p><p>
