--- a/AmericanDream/AmericanDream.html
+++ b/AmericanDream/AmericanDream.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>American Dream</h2>
 <img src="AmericanDream.jpg"> <br>
-Series: 5 issue mini-series<br>
-Illustrator: Brent Anderson<br>
-Writer: Tom DeFalco<br>
-Publisher: 2008 Marvel<br>
+5 issues 2008 Marvel<br>
+Illustrator: Brent Anderson, Writer: Tom DeFalco<br>
 <p>
 Shannon Carter has been featured in Marvel Comics MC2 series A-Next. Her costume is very similar to that of Captain America. Her initial weapons are throwing disks like Ricochet's but later obtains the trademark shield. She appeared as a civilian in A-Next #1, and was named as "Shannon" in A-Next #3; it was not until A-Next #4 that she appeared in costume as a prospective team member.
 </p><p>
