--- a/AnAmericanTail/AnAmericanTail.html
+++ b/AnAmericanTail/AnAmericanTail.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>An American Tail 2</h2>
 <img src="AnAmericanTail.jpg"> <br>
-Series: movie adaptation<br>
-Illustrator: George Wildman<br>
-Writer: Charles Swenson<br>
-Publisher: 1992 Marvel<br>
+Illustrator: George Wildman, Writer: Charles Swenson<br>
+1992 Marvel
 <p>
 About: 1991 American animated comedy western film produced by Steven Spielberg's Amblimation animation studio and released by Universal Pictures. It is the sequel to An American Tail, and the last installment in the series to be released theatrically.
 </p><p>
