--- a/AnimalConfidential/AnimalConfidential.html
+++ b/AnimalConfidential/AnimalConfidential.html
@@ -8,10 +8,8 @@
 
 <body>
 <img src="AnimalConfidential.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Arthur Adams (cover), Eric Vincent<br>
-Writer: Randy Stradley<br>
-Publisher: 1992 Dark Horse<br>
+1 issue 1992 Dark Horse<br>
+Illustrator: Arthur Adams (cover), Eric Vincent, Writer: Randy Stradley
 <p>
 Collection of short hummorus animal featured stories: The Spy; Horseshoes Ain’t Lucky; Advertisement; Authentic Pet Miracles; I Was a Teenage Hairball; Mary the Elephant; My True Story
 </p>
