--- a/Animax/Animax.html
+++ b/Animax/Animax.html
@@ -8,10 +8,8 @@
 
 <body>
 <img src="Animax.jpg"> <br>
-Series: on-going, 4 issues<br>
-Illustrator: Steve Purcell, Gerry Talaoc<br>
-Writer: Walt Simonson<br>
-Publisher: 1986 Star Comics (Marvel)<br>
+4 issues 1986 Star Comics (Marvel)<br>
+Illustrator: Steve Purcell, Gerry Talaoc, Writer: Walt Simonson<br>
 <p>
 When Max, the leader of the Animax team, is killed, a new leader has to be chosen. But then the Madam Caretaker has a secret and surprising mission to perform in order to help the Animax team in "Days of Wrath." 
 </p>
