--- a/Annihilators/Annihilators.html
+++ b/Annihilators/Annihilators.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Annihilators</h2>
 <img src="Annihilators.jpg"> <br>
-Series: on-going, 4 issues<br>
-Illustrator: Tan Eng Huat, Alex Garner (cover)<br>
-Writer: Dan Abnett; Andy Lanning<br>
-Publisher: 2011 Marvel<br>
+4 issues 2011 Marvel<br>
+Illustrator: Tan Eng Huat, Alex Garner (cover), Writer: Dan Abnett; Andy Lanning<br>
 <p>
 Marvel's all-star cosmic team - and cult faves Rocket Raccoon and Groot - in one massive story. The Silver Surfer, Beta-Ray Bill, Gladiator, Quasar, Ronan.
 </p><p>
