--- a/Answer/Answer.html
+++ b/Answer/Answer.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>The Answer</h2>
 <img src="Answer.jpg"> <br>
-Series: on-going, 4 issues <br>
-Illustrator: Mike Horton<br>
-Writer: Dennis Hopeless, Mike Norton<br>
-Publisher: 2013 Dark Horse<br>
+4 issues 2013 Dark Horse<br>
+Illustrator: Mike Horton, Writer: Dennis Hopeless, Mike Norton
 <p>
 Devin McKenzie is an insomniac librarian with a knack for solving puzzles. The Answer! is a masked crime fighter with a giant exclamation point on his face. Aside from a penchant for late nights, they share nothing in common... until both become embroiled in a deadly mystery surrounding a sinister motivational speaker.
 </p>
