--- a/AntmanWasp/AntmanWasp.html
+++ b/AntmanWasp/AntmanWasp.html
@@ -7,12 +7,8 @@
 </head>
 
 <body>
-<h2>Antman &amp; Wasp</h2>
 <img src="AntmanWasp.jpg"> <br>
-Series: on-going<br>
-Illustrator: Tim Seeley, Salvador Espin (cover)<br>
-Writer: Tim Seeley<br>
-Publisher: 2010 Marvel<br>
+3 issues 2011, 5 issues 2018 Marvel<br>
 <p>
 Two of Marvel's smallest heroes must join forces and get over one BIG elephant-in-the-room! Eric O'Grady once STOLE the Ant-Man suit from Hank Pym. But now, Eric is the only one who knows about a secret AIM plot to steal Pym's greatest invention.
 </p><p>
