--- a/AncientJoe/AncientJoe.html
+++ b/AncientJoe/AncientJoe.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Ancient Joe</h2>
 <img src="AncientJoe.jpg"> <br>
-Series: on-going, 4 issues, 1 TPB collection<br>
-Illustrator: Jason Hvam<br>
-Writer: Scott Morse<br>
-Publisher: 2001 Maverick (Dark Horse)<br>
+4 issues, 1 TPB collection 2001 Maverick (Dark Horse)<br>
+Illustrator: Jason Hvam, Writer: Scott Morse
 <p>
 He never should've taken the Devil's silver. Now his wife's passed away and though Joe fears the worst, that she's trapped in Hell, a captive of El Diablo. He's determined to find her and deliver her from the Devil's clutches, whatever the cost. Aided by a down-and-out repairman and a little girl with a tragic secret, Joe follows a path that leads him through the afterlife and beyond. A god? Myth? Man? Well, who can know? Not a soul, but Ancient Joe. . .
 </p>
