--- a/A+X/AX.html
+++ b/A+X/AX.html
@@ -8,13 +8,9 @@
 
 <body>
 <img src="AX001.jpg"> <br>
-Series: 18 issues 2012-2014<br>
-Publisher: Marvel</a> <br>
-Creators:  Jeph Loeb, Dale Keown, Dan Slott, Ron Garney
-Illustrators: various<br>
-Writers: various<br>
+18 issues 2012-2014 Marvel
 <p>
-About: A+X (Avengers + X-Men) was a monthly ongoing comic book anthology series that was published by Marvel Comics from October 2012 to March 2014 as part of the company's Marvel NOW! initiative. Each issue includes two stories by different creative teams featuring a different team-up of an Avenger and a X-Man. The series was launched as a followup to the 2012 event Avengers Vs. X-Men and its spinoff title, AVX: VS. According to X-Men editor Nick Lowe, "Because AvX Versus did so well, and we enjoyed doing it so much and the fans embraced it so much, we wanted to keep that kind of thing going."
+A+X (Avengers + X-Men) was a monthly ongoing comic book anthology series that was published by Marvel Comics from October 2012 to March 2014 as part of the company's Marvel NOW! initiative. Each issue includes two stories by different creative teams featuring a different team-up of an Avenger and a X-Man. The series was launched as a followup to the 2012 event Avengers Vs. X-Men and its spinoff title, AVX: VS. According to X-Men editor Nick Lowe, "Because AvX Versus did so well, and we enjoyed doing it so much and the fans embraced it so much, we wanted to keep that kind of thing going."
 </p><p>
 Story:<br>
 #1 Captain America and Cable fight for the future.<br> 
