--- a/A-Force/A-Force.html
+++ b/A-Force/A-Force.html
@@ -2,22 +2,72 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>A-Force</title>
 </head>
 
 <body>
-<h2>A-Force</h2>
-<img src="AForce1.jpg"> <img src="AForce2.jpg"><br>
-Series: 15 issue series<br>
-Publisher: 2015 by Marvel</a> <br>
+<img src="AForce1.jpg"><br>
+5 issues 2015, 10 issues 2016 by Marvel<br>
 Creators: G. Willow Wilson, Marguerite Bennett, Jorge Molina <br>
 <p>
-About: Collected into 2 volumes, A-Force vol 0: Warzones! (5 issues), A-Force vol 1: Hypertime (10 issues).
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AForce1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AForce39.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Collected into 2 volumes, A-Force vol 0: Warzones! (5 issues), A-Force vol 1: Hypertime (10 issues).
 </p><p>
 A-Force was an ongoing comic book series published by Marvel Comics that debuted in May 2015 as a part of Marvel's "Secret Wars" crossover storyline. The series, created by writers G. Willow Wilson and Marguerite Bennett and artist Jorge Molina, features Marvel's first all-female team of Avengers. A-Force ended in October 2016 due to poor sales despite favorable reviews from critics and was described as being "decidedly feminist".
 </p><p>
-Story:<br>
 A-Force, the defenders of the matriarchal Battleworld nation of Arcadia, responds to a megalodon attack while on routine patrol. During the attack, America Chavez throws the shark across the Shield, the wall that separates their borders, thus breaking the laws of Emperor Doom and is subsequently arrested by Doom's enforcers, the Thor Corps. Despite appeals from She-Hulk, the baroness of Arcadia, Chavez is sentenced to spend the rest of her life on the wall. In response, She-Hulk tasks the Sub-Mariners - Namor, Namorita, and Namora to find the source of the megalodon attack. Meanwhile, Nico Minoru, lamenting the loss of Chavez, comes across a mysterious figure that fell out of the sky.
 </p><p>
 The Sub-Mariners discover a strange portal in the ocean's depths but it implodes as they draw near. Later, at the behest of Loki, Minoru introduces her new friend to She-Hulk. When Medusa accuses the stranger, a sentient pocket universe, of creating the portal, a sentinel falls from another portal and attacks the team. During the fight, the newcomer saves Dazzler and convinces She-Hulk that she is not the cause. After destroying the sentinel, She-Hulk decides to travel through the still open portal and investigate the source herself.
@@ -27,7 +77,7 @@ She-Hulk arrives in a post-apocalyptic Manhattan and after a brief encounter wit
 The newcomer smuggles A-Force outside the city. There, She-Hulk realizes that the portals' energy is of Asgardian origin and they deduce that the traitor is Loki. With A-Force outlawed, Loki is set to be crowned the new baroness of Arcadia but is preemptively attacked by A-Force. After Loki is defeated, she releases a final blast of energy that breaches the Shield thus allowing the zombie horde on the other side to enter.
 </p><p>
 As the horde approaches, She-Hulk rallies A-Force, the Thor Corps and other heroes in defense of Arcadia. During the fight, the zombies begin to overwhelm the city but the newcomer, now named Singularity, absorbs the entire horde, sacrificing herself in the process. In the aftermath of the battle, the Thor Corps arrests Loki as A-Force begins reconstruction of Arcadia. Meanwhile, She-Hulk comforts Minoru, who is still mourning the loss of her friends, telling her that she believes Singularity lives on.
-</p><p>
+</p>
 
 </body>
 </html>
