--- a/ANext/ANext.html
+++ b/ANext/ANext.html
@@ -7,18 +7,15 @@
 </head>
 
 <body>
-<h2>A-Next</h2>
+
 <img src="ANext001.jpg"><br>
-Series: First appearance What If? #105<br>
-Publisher: 1998 Marvel</a> <br>
-Illustrator: Ron Lim, Ron Frenz<br>
-Writer: Tom DeFalco<br> 
+1998 Marvel</a> <br>
 <p>
-About: A-Next is the Marvel Comics 2 universe version of the Avengers. The team made its first appearance in What If? #105, the first comic featuring Spider-Girl, and the team's origin story was told in the A-Next #1, cover dated October 1998.
+A-Next is the Marvel Comics 2 universe version of the Avengers. The team made its first appearance in What If? #105, the first comic featuring Spider-Girl, and the team's origin story was told in the A-Next #1, cover dated October 1998.
 </p><p>
 MC2 (Marvel Comics 2) is an imprint from Marvel Comics whose comic books depict an alternative future timeline for the Marvel Universe. The imprint was spun off from the events of What If? #105 (February 1998), which was the first appearance of the character Spider-Girl, Spider-Man's daughter from an alternative future.
 </p><p>
-Story: The issue begins with the group, consisting of Kevin Masterson (Thunderstrike), Cassandra Lang (The Stinger), Mainframe, Zane Yama (J2), Helen Takahama (Jolt), Robert Baldwin (Speedball), and Jubilation Lee fighting some denizens of Asgard for some reason. The narration focuses on Kevin as he begins to reminisce about how this was all his fault.
+The issue begins with the group, consisting of Kevin Masterson (Thunderstrike), Cassandra Lang (The Stinger), Mainframe, Zane Yama (J2), Helen Takahama (Jolt), Robert Baldwin (Speedball), and Jubilation Lee fighting some denizens of Asgard for some reason. The narration focuses on Kevin as he begins to reminisce about how this was all his fault.
 </p><p>
 Flashing back several hours ago, Kevin has shown up at the Avengers Mansion at the request of Edwin Jarvis, the mansions chief of staff. The Mansion is currently managed by the Maria Stark Foundation, since the Avengers disassembled years previously. At Thor's request, Jarvis gives Kevin the weapon Thunderstrike, which Kevin's now deceased father, Eric Masterson, wielded during his time as hero and Avenger. Kevin leaves the Avengers Mansion only to be attacked by troll-men while still in the compound. While the mansions security measures leap into action, Jarvis sends out the Avengers beacon.
 </p>
