--- a/ATeam/Ateam.html
+++ b/ATeam/Ateam.html
@@ -2,19 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>A-Team</title>
 </head>
 
 <body>
-<h2>A-Team</h2>
-<img src="Ateam.jpg"> <img src="ATeam2.jpg"> <img src="ATeam3.jpg"> <img src="ATeam4.jpg"><br>
-Series: 3 issue mini series and 1 collection <br>
-Publisher: 1983 Marvel</a> <br>
-Illustrators: Marie Severin, Chic Stone, Jim Mooney, Joe Giella, Alan Kupperberg<br>
-Writers: Jim Salicrup, Alan Kupperberg<br> 
+<img src="Ateam1.jpg"><br>
+3 issues, 1 collection 1983 Marvel
 <p>
-About: In 1983 Marvel Comics released an A-Team title which ran for 3 issues. Due to the huge popularity of both comics and The A-Team show at that time, information which lists this as a "3-issue mini-series" is probably accurate. They were often released together as a set in a plastic bag also collected as the A-Team Storybook.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Ateam1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ateam2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ateam3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ateam4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ateam5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+In 1983 Marvel Comics released an A-Team title which ran for 3 issues. Due to the huge popularity of both comics and The A-Team show at that time, information which lists this as a "3-issue mini-series" is probably accurate. They were often released together as a set in a plastic bag also collected as the A-Team Storybook.
 </p><p>
 Story: Diamonds are a Thief's Best Friend! Written by Jim Salicrup. Art by Marie Severin and Chic Stone. Adapting the NBC TV show episode. All action! All thrills! Featuring Hannibal Smith, Howling Mad Murdock, B.A. Baracus, Amy Allen, and The Face. 
 </p><p>
