--- a/AbominableMrSeabrook/AbominableMrSeabrook.html
+++ b/AbominableMrSeabrook/AbominableMrSeabrook.html
@@ -9,8 +9,7 @@
 <body>
 <img src="AbominableMrSeabrook.jpg"> <br>
 Creator: Joe Ollmann<br>
-Series: Graphic Novel<br>
-Publisher: 2017 Drawn &amp; Quarterly<br>
+1 issue 2017 Drawn &amp; Quarterly<br>
 <p>
 In his introduction to The Abominable Mr. Seabrook, cartoonist Joe Ollmann writes movingly about what attracted him to the globe-trotting scribe: his honesty and his insecurity. (Ollmann also notes that both he and his subject have struggled with alcohol, and both blended/blend a desire to believe in the supernatural with an inherent skepticism.) Above and beyond, this volume, which encompasses the scope of a life, makes the case for Seabrook’s continued relevance as a writer, and charts an unsettling decline and fall. 
 </p><p>
