--- a/AgeOfHeroes/AgeOfHeroes.html
+++ b/AgeOfHeroes/AgeOfHeroes.html
@@ -2,19 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Age Of Heroes</title>
 </head>
 
 <body>
-<h2>Age Of Heroes</h2>
-<img src="AgeOfHeroes001.jpg"> <img src="AgeOfHeroes003.jpg"> 
-<img src="AgeOfHeroesSpecial.jpg"><br>
-Series: 2 issues Halloween, 3 issues and 2 Specials by Image Comics<br>
-Illustrator: John Ridgway<br>
-Writer: James D. Hudnall<br>
-Publisher: 1996 Holloween Comics, 1997 Image Comics<br>
+<img src="AgeOfHeroes001.jpg"><br>
+5 issues and 2 Specials 1996 by Halloween and Image<br>
+Illustrator: John Ridgway, Writer: James D. Hudnall
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroes001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroes002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroes003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroes004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroes005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroesSpecial1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgeOfHeroesSpecial2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: Halloween did the first 2 issues, being John Hudnall's own publishing title, then Image picked it up starting at #3 for 3 issues also 2 issues of Age of Heroes Special #1-2 in 1997. Some of the stories were featured in color for the first time in Britain’s STRIP Magazine in 2012.
 </p><p>
 Story: Seven misfits and outcasts, some of them handicapped, are drawn together from all walks of life by fate. They are presented with a problem the gods themselves can’t solve. For the gods are no longer in the world. The actions of these seven usher in a new age. The Age of Heroes…
