--- a/kb.html
+++ b/kb.html
@@ -295,9 +295,16 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>A+X</td>
+<td>2012</td>
+<td>Epic</td>
+<td><a href="A+X/AX.html">Details</a></td>
+</tr>
+
+<tr>
 <td>A1</td>
 <td>1989</td>
-<td>Atomeka, Marvel</td>
+<td>Atomeka</td>
 <td><a href="A1/A1.html">Details</a></td>
 </tr>
 
@@ -340,13 +347,6 @@ Creative Knowledgebase<br>
 <td>2012</td>
 <td>Vertigo</td>
 <td><a href="ADD/ADD.html">Details</a></td>
-</tr>
-
-<tr>
-<td>A+X</td>
-<td>2012</td>
-<td>Epic</td>
-<td><a href="A+X/AX.html">Details</a></td>
 </tr>
 
 <tr>
@@ -666,7 +666,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Age of Heroes</td>
 <td>1996</td>
-<td>Image</td>
+<td>Halloween</td>
 <td><a href="AgeOfHeroes/AgeOfHeroes.html">Details</a></td>
 </tr>
 
