--- a/AbeSapien/AbeSapien.html
+++ b/AbeSapien/AbeSapien.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="AbeSapien.jpg"><br>
-2013: 9 issues and 1 Graphic Novel collection, 2013 - 2016: 36 issues<br>
-Publisher: Dark Horse<br>
+9 issues, 1 TPB collection 2013, 36 issues 2013-2016 by Dark Horse<br>
 Creator: Mike Mignola <br>
 <p>
 <div class="row"><div class="column">
