--- a/AgeOfInnocenceIronman/AgeOfInnocenceIronman.html
+++ b/AgeOfInnocenceIronman/AgeOfInnocenceIronman.html
@@ -7,17 +7,13 @@
 </head>
 
 <body>
-<h2>Age of Innocense: The Rebirth of Iron Man</h2>
 <img src="AgeOfInnocenceIronman.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Hector Collazo, Al Rio<br>
-Writer: Terry Kavanagh<br>
-Publisher: 1996 Marvel<br>
+1 issue 1996 Marvel<br>
+Illustrator: Hector Collazo, Al Rio, Writer: Terry Kavanagh<br>
 <p>
-About: Origins retold: Iron Man, Pepper Potts, Happy Hogan. 
- 
+About: Origins retold: Iron Man, Pepper Potts, Happy Hogan.
 </p><p>
-Story: As the young Tony Stark lies at death's door after being blasted by his adult counterpart, Jarvis, Pepper and Happy wait and watch at his bedside as the reminisce about Iron Man's past. Tony is visited by visions of past loves and old enemies and this gives him the resolve to return to the land of the living and carry on as Iron Man.
+As the young Tony Stark lies at death's door after being blasted by his adult counterpart, Jarvis, Pepper and Happy wait and watch at his bedside as the reminisce about Iron Man's past. Tony is visited by visions of past loves and old enemies and this gives him the resolve to return to the land of the living and carry on as Iron Man.
 </p>
 </body>
 </html>
