--- a/AgeOfReptiles/AgeOfReptiles.html
+++ b/AgeOfReptiles/AgeOfReptiles.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Age Of Reptiles</h2>
 <img src="AgeOfReptilesOmnibus.jpg"> <br>
-Series: Many individual issues and branches and 1 Omibus collection<br>
-Illustrator: Richard Delgado<br>
-Writer: Richard Delgado<br>
-Publisher:1993 Dark Horse<br>
+1 Omibus collection 1993 Dark Horse<br>
+Created by Richard Delgado
 <p>
 About: The series originally consisted of two comics, which are set in the Mesozoic era: Tribal Warfare, from 1993, and The Hunt, from 1997. Both are very violent stories about the daily lives of carnivorous dinosaurs. A third series, The Journey, began November 2009, with a fourth, "Ancient Egyptians", debuting June 2015. Tribal Warfare, The Hunt, and The Journey have been collected in Age of Reptiles Omnibus, Volume 1.
 </p><p>
