--- a/AgeOfTheSentry/AgeOfTheSentry.html
+++ b/AgeOfTheSentry/AgeOfTheSentry.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>the Age of the Sentry</h2>
 <img src="AgeOfTheSentry.jpg"> <br>
-Series: 6 issue mini series, 1 collections TPB 2008<br>
-Publisher: Marvel<br>
+6 issues, 1 collection TPB 2008 Marvel<br>
 <p>
 Collects Age of the Sentry (2008-2009) #1-6. Written by JEFF PARKER and PAUL TOBIN. Art by NICK DRAGOTTA, RAMON ROSANAS, BILL GALVAN, MICHAEL CHO and COLLEEN COOVER. Cover by DAVE BULLOCK and MICHAEL CHO. 
 </p><p>
