--- a/AgeOfXAlpha/AgeOfXAlpha.html
+++ b/AgeOfXAlpha/AgeOfXAlpha.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Age of X Alpha</h2>
 <img src="AgeOfXAlpha.jpg"> <br>
-Series: one-shot with many covers<br>
-Illustrator: Chris Bachalo, Tim Townsend<br>
-Writer: Mike Carey<br>
-Publisher: 2011 Marvel<br>
+1 issue 2011 Marvel<br>
+Illustrator: Chris Bachalo, Tim Townsend, Writer: Mike Carey
 <p>
 About: The various X-Men characters tell stories about how they came to be living on Fortress X, revealing a world unlike the normal X-Men universe, one where mutants have been more aggressively hunted and characters' histories have been changed. They are waiting for a final attack on their sanctuary from the outside world, then the attack begins.
 </p>
