--- a/AgentX/AgentX.html
+++ b/AgentX/AgentX.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Agent X</h2>
 <img src="AgentX001.jpg"> <br>
-Series: 15 issues<br>
-Illustrator: Udon Studios<br>
-Writer: Gail Simone<br>
-Publisher: 2002 Marvel<br>
+15 issues 2002 Marvel<br>
+Illustrator: Udon Studios, Writer: Gail Simone
 <p>
 About: The series, a pseudo-spin-off of Deadpool, continued the cynical, slapstick, and highly polished action which had characterized its parent series. Nijo was an assassin, mercenary, and agent employed by the telepathic German assassin called the Black Swan. He blamed Deadpool for his brother's death as he was among the targets of Deadpool's apparently successful assassination of the Japanese crime lords named the Four Winds. 
 </p><p>
