--- a/AgeOfHeroesMarvel/AgeOfHeroesMarvel.html
+++ b/AgeOfHeroesMarvel/AgeOfHeroesMarvel.html
@@ -7,16 +7,14 @@
 </head>
 
 <body>
-<h2>Age of Heroes Heroic Age</h2>
 <img src="AgeOfHeroes.jpg"> <br>
-Series: #1-4, Collection<br>
-Illustrator: Greg Tocchini<br>
-Writer: Kurt Busiek<br>
-Publisher: 2010 Marvel<br>
+4 issues 2010 Marvel<br>
+Illustrator: Greg Tocchini, Writer: Kurt Busiek
 <p>
 About: Eisner-winner &amp; fan-favorite Kurt Busiek returns to Marvel. The Heroes are restored to their rightful place in this new era, and the world is safer for them. They defeated Osborn and his Siege on Asgard, now they have one last foe to face: the Mayor of New York, J. Jonah Jameson! 
 </p><p>
 Also, MI13 come to the US, but one of them isn't leaving, they are defecting to the AVENGERS. Plus Dr. Voodoo's Sorcerer Supreme duties infringe on "date night" and how much trouble can Spider-Man get into in one day? The answer: A lot!
 </p>
+
 </body>
 </html>
