--- a/AgeOfXUniverse/AgeOfXUniverse.html
+++ b/AgeOfXUniverse/AgeOfXUniverse.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Age of X Universe</h2>
 <img src="AgeOfXUniverse1.jpg"> <img src="AgeOfXUniverse2.jpg"><br>
-Series: 2 issue mini series<br>
-Illustrator: Simone Bianchi, Khoi Pham<br>
-Writer: Simon Spurrier<br>
-Publisher: 2011 Marvel<br>
+2 issues 2011 Marvel<br>
+Illustrator: Simone Bianchi, Khoi Pham, Writer: Simon Spurrier
 <p>
 About: In the brutal world of the Age of X, we see how the non-mutant heroes were affected, leading up to an "Avengers" team converging on a mutant hideout. Non-mutant superhumans like Spider-Man are also being hunted. In this story, Peter and MJ deal with getting her out of the country to protect their unborn daughter.
 
